--- a/src/css/MovieCard.css
+++ b/src/css/MovieCard.css
@@ -125,10 +125,12 @@
     color: #bbb;
   }
 
-  .release-year {
+  .release-date {
     background-color: rgba(255, 255, 255, 0.1);
     padding: 0.2rem 0.5rem;
     border-radius: 3px;
+    font-size: 0.7rem;
+    white-space: nowrap;
   }
 
   .vote-count {
